<resources>
    <string name="app_name">Daily Calories</string>
    <string name="cm">cm</string>
    <string name="ft">ft</string>
    <string name="imperial_units">imperial_units</string>
    <string name="metric_units">metric_units</string>
    <string name="calculate">calculate</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="gender">Gender</string>
    <string name="daily_calories_calculator">HealthyLife</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="switch_to_cm">Switch to Metric</string>
    <string name="switch_to_lb">Switch to Imperial</string>
    <string name="years">Years</string>
    <string name="bmr">BMR</string>
    <string name="bmi">BMI</string>


    <string-array name="Categories">
            <item>Choose Activity level</item>
            <item>Little or no exercise</item>
            <item>Light exercise 1/3 days-week</item>
            <item>Moderate exercise 3/5 days/week</item>
            <item>Hard exercise 6/7 days/week</item>
            <item>Daily workouts + physical job</item>

        </string-array>

    <string-array name="Goals">
        <item>Choose Your Goal</item>
        <item>Weight Loss</item>
        <item>Rapid Weight Loss</item>
        <item>Weight Gain</item>
        <item>Rapid Weight Gain</item>

    </string-array>


</resources>