<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="8dp"
        tools:ignore="RtlHardcoded">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:text="@string/daily_calories_calculator"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/weight_And_Height_Holder"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="0.5"
            app:cardBackgroundColor="#BAFFFFFF"
            app:cardCornerRadius="18dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_main_heightlabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/height"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/activity_main_heightcm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="3"
                    android:gravity="center_horizontal"
                    android:hint="@string/cm"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="false"
                    android:singleLine="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/activity_main_heightfeet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="3"
                        android:gravity="center_horizontal"
                        android:hint="@string/ft"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/activity_main_heightinches"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="3"
                        android:gravity="center_horizontal"
                        android:hint="in"
                        android:inputType="numberDecimal" />

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="0.5"
            app:cardBackgroundColor="#CEFFFFFF"
            app:cardCornerRadius="18dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_main_weightlabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Weight"
                    android:textSize="24sp" />
                <EditText
                    android:id="@+id/activity_main_weightkgs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="3"
                    android:gravity="center_horizontal"
                    android:hint="kg"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/activity_main_weightlbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="3"
                    android:gravity="center_horizontal"
                    android:hint="lbs"
                    android:inputType="numberDecimal" />



            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gender_And_age_Holder"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="0.5"
            app:cardBackgroundColor="#BAFFFFFF"
            app:cardCornerRadius="18dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                >

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:gravity="center_horizontal"
                        android:text="@string/gender"
                        android:textSize="24sp" />
                    <RadioButton
                        android:id="@+id/radio_Woman1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="true"
                        android:text="@string/woman"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio_Man1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:layout_marginEnd="14dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/man"
                        android:textSize="18sp" />


                </RadioGroup>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="0.5"
            app:cardBackgroundColor="#CEFFFFFF"
            app:cardCornerRadius="18dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="123dp"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/age"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/yearsET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/years"
                    android:inputType="number"
                    android:textSize="18sp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <Spinner
        android:id="@+id/dropdown_menu1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="12dp"


        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:orientation="horizontal">



        <Button
            android:id="@+id/activity_main_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:text="@string/calculate" />

        <ToggleButton
            android:id="@+id/activity_main_toggleunits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:checked="true"
            android:textOff="@string/switch_to_cm"
            android:textOn="@string/switch_to_lb" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/activity_main_resultcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardBackgroundColor="#C6FFFFFF"
        app:cardCornerRadius="6dp"
        app:cardMaxElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="BMI"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/activity_main_bmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/activity_main_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/activity_main_bmrresultcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardBackgroundColor="#C6FFFFFF"
        app:cardCornerRadius="6dp"
        app:cardMaxElevation="6dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="BMR"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/activity_main_bmr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/activity_bmr_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="16sp" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</ScrollView>